--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
 <body>
 	<main class="flex__container">
 		<div class="flex__item">
-			<h1 class="flex__price" data-currency="$">2</h1>
-			<img src="img/bean_bz.jpg" alt="" class="item__img">
-			<h2 class="flex__title">Bronze</h2>
+			<span class="flex__price" data-currency="$">2</span>
+			<img src="img/bean_bz.jpg" alt="" class="flex__img">
+			<span class="flex__title">Bronze</span>
 			<p class="flex__subtitle">any cup of coffee until $3</p>
 		</div>
 		<div class="flex__item flex__item--high">
-			<h1 class="flex__price" data-currency="$">3</h1>
-			<img src="img/bean_gd.jpg" alt="" class="item__img">
-			<h2 class="flex__title">Gold</h2>
+			<span class="flex__price" data-currency="$">3</span>
+			<img src="img/bean_gd.jpg" alt="" class="flex__img">
+			<span class="flex__title">Gold</span>
 			<p class="flex__subtitle">any cup of coffee until $5</p>
 		</div>
 		<div class="flex__item">
-			<h1 class="flex__price" data-currency="$">2.5</h1>
-			<img src="img/bean.jpg" alt="" class="item__img">
-			<h2 class="flex__title">Silver</h2>
+			<span class="flex__price" data-currency="$">2.5</span>
+			<img src="img/bean.jpg" alt="" class="flex__img">
+			<span class="flex__title">Silver</span>
 			<p class="flex__subtitle">any cup of coffee until $4</p>
 		</div>
 	</main>	
